# popper

./: .codecov.yml  .coverage  .dockerignore  .gitignore  .gitmodules  .pep8speaks.yml  .popper.yml  .travis.yml  CNAME  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  OVERVIEW.md  README.md  _config.yml  about.md  airflow.py  build  build-me.sh  index.md  install.sh  main.md  popper.sh  pubs.md  pyproject.toml
.vim/: coc-settings.json
_layouts/: default.html
_posts/: 2016-11-07-Main.md  2017-01-23-popper-for-linux-research-part-1.md
ci/: README.md  cli.workflow  common-setup.sh  run_tests.sh  setup.sh  teardown.sh  test-add.sh  test-archive.sh  test-badge-server.sh  test-badge.sh  test-ci.sh  test-cleanup.sh  test-defaults.sh  test-env-vars.sh  test-env.sh  test-existing.sh  test-init.sh  test-ls.sh  test-matrix-execution.sh  test-metadata.sh  test-mv.sh  test-parameters.sh  test-require.sh  test-reset.sh  test-rm.sh  test-run.sh  test-search.sh  test-stages.sh  test-version.sh  test-workflow.sh
cli/: .coverage  Dockerfile  MANIFEST.in  README.md  setup.py
dev/: Dockerfile  README.md  docker-compose.yml
doc/: Getting-Started.md  Intro-to-Popper.md
docs/: Makefile  blog_schedule.md  conf.py  index.rst  installation.md  popper_vs_other_software.md
envs/: build_images  check.py  push_images  stretch
events/: sc17_bof.md
examples/: README.md
examples/ci/cpp/: CMakeLists.txt  ci.yml
examples/ci/cpp/src/: CMakeLists.txt
images/: diagram.pptx  diagrams.pptx
popper/: Dockerfile  README.md  add.go  badge.go  check.go  ci.go  common.go  env.go  graph.go  (+13 more)
(+546 files in other folders)
